# Ghosty

./: .gitignore  Package.swift  README.md
Sources/GhostyApp/: Info.plist
Sources/GhostyApp/App/: AppDelegate.swift  GhostAssistantModel.swift  GhostTheme.swift  GhostThemeRegistry.swift  GhostyApp.swift  SettingsManager.swift
Sources/GhostyApp/App/Themes/: AlienGhostTheme.swift  BlingyGhostTheme.swift  (+4 more)
Sources/GhostyApp/Resources/Backend/: agent.py  applescript_engine.py  config.py  no_backend.py  orchestrator.py  orchestrator_modal.py  pyproject.toml  requirements.txt  screen_control.py  showui_client.py  showui_modal.py  state.py  state_bridge.py  template_backend.py
Sources/GhostyApp/Resources/Backend/agents/: base.py  files_agent.py  gui_agent.py  system_agent.py  web_agent.py
Sources/GhostyApp/Resources/Backend/graph/: builder.py  router.py  schema.py  supervisor.py
Sources/GhostyApp/Resources/Backend/llm/: prompts.py  provider.py
Sources/GhostyApp/Resources/Backend/memory/: client.py  preferences.py
Sources/GhostyApp/Resources/Backend/tools/: applescript.py  browser.py  clipboard.py  screen.py  shell.py
Sources/GhostyApp/Services/: BackendBridge.swift  GlobalHotkeyManager.swift  MenuBarController.swift  MicLevelMonitor.swift  SpeechListener.swift  WakeWordDetector.swift
Sources/GhostyApp/UI/: BrandIcons.swift  GhostCharacterView.swift  MenuBarPopoverView.swift  NotchPanelView.swift  OnboardingView.swift  SettingsView.swift
Sources/GhostyApp/Windowing/: NotchWindowController.swift  OnboardingWindowController.swift  SettingsWindowController.swift
